[metadata]
name = openchef
version = 0.0.1
license = null
description = Python API for managing food recipes and fetching relevent data from recipes generated.
long_description = file: README.rst
author = Harsh Davda
author_email = harsh.davda11@outlook.com
classifiers=
   Development Status :: 1 - Planning

[options]
packages = find:
package_dir =
    =src
include_package_data = True
# install_requires =
#    <requirement 1>
#    <requirement 2>
#    <...>
#    <requirement n>

[options.packages.find]
where=src